[gd_scene load_steps=4 format=3 uid="uid://cbgk1537m5sog"]

[ext_resource type="Script" path="res://game_states/main.gd" id="1_8dagw"]
[ext_resource type="StyleBox" uid="uid://b2d07chvnojnq" path="res://ui/transparent_drawer_box.tres" id="3_rmoxu"]
[ext_resource type="PackedScene" uid="uid://wmfdl01v1vgo" path="res://ui/game_over_popup/game_over_popup.tscn" id="27_ygsao"]

[node name="Main" type="Node3D"]
process_mode = 3
script = ExtResource("1_8dagw")

[node name="LoadingScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.252173, 0.433054, 0.678684, 1)

[node name="Spinner" type="ColorRect" parent="LoadingScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
color = Color(1, 0, 1, 1)

[node name="Label" type="Label" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -70.59
offset_right = 31.0
offset_bottom = -47.59
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Loading"

[node name="PopupCanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 3
visible = false

[node name="UI" type="Control" parent="PopupCanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PopupCanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverPopup" parent="PopupCanvasLayer/UI/CenterContainer" instance=ExtResource("27_ygsao")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PausePopup" type="PanelContainer" parent="PopupCanvasLayer/UI/CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_rmoxu")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupCanvasLayer/UI/CenterContainer/PausePopup"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupCanvasLayer/UI/CenterContainer/PausePopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Game is paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PopupCanvasLayer/UI/CenterContainer/PausePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"
